fix port alignment
the alignment of the port field changed depending of the checkbox of
"Checkmk agent / API integrations" on section "Monitoring agents" on
page "Add host" after you added a host name and clicked
"Test agent connection".

CMK-29348

--- a/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
@@ -1470,6 +1470,7 @@ div.user_messages {
 #form_edit_host table#monitoring_agents {
   div#attr_default_tag_agent,
   div#attr_entry_tag_agent {
+    display: flex;
     div.cmk-vue-app {
       display: contents;
     }
